--- a/css/jquery.bootstrap.treeselect.css
+++ b/css/jquery.bootstrap.treeselect.css
@@ -1,2 +1,58 @@
-.bts_dropdown ul{list-style:none;padding:0}.bts_dropdown ul li{border-top:1px dashed #EEE;padding-left:20px}.bts_dropdown ul li label{position:relative;padding:5px 20px;white-space:nowrap}.bts_dropdown ul li label input{position:absolute;left:0px;top:5px}.bts_dropdown>ul{max-height:289px;overflow:auto}.bts_dropdown>ul>li{border-top:1px solid #EEE}.bts_dropdown>ul>li:first-child{border-top:0}
+.bts_dropdown ul {
+    list-style: none;
+    padding: 0
+}
+
+.bts_dropdown ul li {
+    border-top: 1px dashed #EEE;
+    padding-left: 20px
+}
+
+.bts_dropdown ul li label {
+    position: relative;
+    padding: 5px 20px;
+    white-space: nowrap
+}
+
+.bts_dropdown ul li label input {
+    position: absolute;
+    left: 0px;
+    top: 5px
+}
+
+.bts_dropdown > ul {
+    max-height: 289px;
+    overflow: auto
+}
+
+.bts_dropdown > ul > li {
+    border-top: 1px solid #EEE
+}
+
+.bts_dropdown > ul > li:first-child {
+    border-top: 0
+}
+
+.treeSelectMenu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    float: left;
+    min-width: 160px;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    font-size: 14px;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: 4px;
+    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+}
+
 /*# sourceMappingURL=jquery.bootstrap.treeselect.css.map */
